# ervy

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/ervy/: Cargo.toml
crates/ervy-cli/: Cargo.toml
crates/ervy-cli/src/: main.rs
crates/ervy/src/: bar.rs  bullet.rs  color.rs  datum.rs  donut.rs  gauge.rs  lib.rs  options.rs  pie.rs  scatter.rs
docs/plans/: 2026-06-27-ervy-rust.md
docs/superpowers/specs/: 2026-06-27-ervy-rust-design.md
