[workspace]
resolver = "2"
members = ["crates/ervy", "crates/ervy-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Volodymyr Kopytsia"]
license = "MIT"
repository = "https://github.com/ervy-rs/ervy"
keywords = ["chart", "terminal", "ascii", "tui", "visualization"]
categories = ["visualization", "command-line-utilities"]
