[package]
name = "ervy-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Ervy terminal charting library"
repository.workspace = true

[dependencies]
ervy = { path = "../ervy" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
