[package]
name = "ervy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bring charts to terminal — Rust rewrite of Ervy"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
